--- a/acrobat.html
+++ b/acrobat.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Adobe Acrobat | 建立、編輯和審核 PDF">
     <meta property="og:description" content="Adobe Acrobat 滿足您所有的 PDF 需求。從共用編輯到轉換文件，Acrobat 全面支援。">
-    <meta property="og:image" content="https://honeybeeweng.github.io/HoneyBee/images/og-index.png">
+    <meta property="og:image" content="https://honeybeeweng.github.io/HoneyBee/images/og-ac.png">
     <meta property="og:locale" content="zh_TW">
     <title>Adobe Acrobat | 建立、編輯和審核 PDF</title>
     <link rel="stylesheet" href="./style/reset.css">
@@ -26,14 +26,14 @@
         <a class="nav-btn nav-btn-active" href="./acrobat.html">acrobat</a>
         <a class="nav-btn" href="./premiere.html">premiere</a>
         <a class="nav-btn" href="./photoshop.html">photoshop</a>
-        <a class="nav-btn" href="./after-effect.html">after-effect</a>
+        <a class="nav-btn" href="./after-effects.html">after-effects</a>
         <a class="nav-btn" href="./illustrator.html">illustrator</a>
         <a class="nav-btn" href="./dreamweaver.html">dreamweaver</a>
     </nav>
     
     <article class="article article-ac">
         <div class="article-head">
-            <h1 class="article-title">最佳的 PDF 工具現在更加緊密連結</h1>
+            <h1 class="article-title">Acrobat 最佳的 PDF 工具現在更加緊密連結</h1>
             <p class="article-desc">Acrobat DC 與 Document Cloud 服務，是現今多裝置世界中最完整的 PDF 解決方案。可將您與文件、團隊及最愛的 PDF 工具連成一體。若有需要，您可以隨時隨地在任何裝置上使用它，讓團隊工作更輕鬆。
             </p>
             <p class="article-desc">使用桌上型電腦及行動裝置，與創意團隊、客戶和廣告代理商安全地協作 (不論防火牆內外)。您可以將 InDesign 或 Illustrator 檔案轉換成 PDF，以輕鬆地分享、傳送給多位審核者，並在單一檔案中線上收集注釋。</p>
