--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a class="nav-btn nav-btn-photoshop" href="./photoshop.html" >photoshop</a>
                 </li>
                 <li class="nav-li">
-                    <a class="nav-btn nav-btn-after-effect" href="./after-effect.html" >after-effect</a>
+                    <a class="nav-btn nav-btn-after-effect" href="./after-effects.html" >after-effects</a>
                 </li>
                 <li class="nav-li">
                     <a class="nav-btn nav-btn-illustrator" href="./illustrator.html" >illustrator</a>
