--- a/premiere.html
+++ b/premiere.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="專業影片編輯軟體 | Adobe Premiere Pro">
     <meta property="og:description" content="使用領先業界的影片編輯器 Adobe Premiere Pro。編輯具有視覺震撼力的影片，為社群分享、電視和電影創作專業作品。">
-    <meta property="og:image" content="https://honeybeeweng.github.io/HoneyBee/images/og-index.png">
+    <meta property="og:image" content="https://honeybeeweng.github.io/HoneyBee/images/og-pr.png">
     <meta property="og:locale" content="zh_TW">
     <title>專業影片編輯軟體 | Adobe Premiere Pro</title>
     <link rel="stylesheet" href="./style/reset.css">
@@ -26,14 +26,14 @@
         <a class="nav-btn" href="./acrobat.html">acrobat</a>
         <a class="nav-btn nav-btn-active" href="./premiere.html">premiere</a>
         <a class="nav-btn" href="./photoshop.html">photoshop</a>
-        <a class="nav-btn" href="./after-effect.html">after-effect</a>
+        <a class="nav-btn" href="./after-effects.html">after-effects</a>
         <a class="nav-btn" href="./illustrator.html">illustrator</a>
         <a class="nav-btn" href="./dreamweaver.html">dreamweaver</a>
     </nav>
     
-    <article class="article article-ac">
+    <article class="article article-pr">
         <div class="article-head">
-            <h1 class="article-title">永遠更勝一籌的視訊編輯</h1>
+            <h1 class="article-title">Premiere 永遠更勝一籌的視訊編輯</h1>
             <p class="article-desc">Premiere Pro CC 是領先業界的視訊編輯軟體，適用於電影、電視和網路。創意工具、與其他 Adobe 應用程式和服務的整合及 Adobe Sensei 的強大威力，可幫助您在一個順暢的工作流程中將素材打造成精美的影片和視訊。我們的全新應用程式 Premiere Rush 也包含在您的訂閱中，好讓您可以隨處在所有裝置上捕捉素材及開始編輯。
             </p>
             <p class="article-desc">好萊塢電影製作人、電視編輯人員、YouTuber 網紅、錄影師等每個要訴說故事的人都是使用 Premiere Pro，也包括您。</p>
