--- a/illustrator.html
+++ b/illustrator.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <nav class="nav">
+    <nav class="nav" id="Nav">
         <a class="nav-btn nav-btn-index" href="./index.html">index</a>
         <a class="nav-btn" href="./acrobat.html">acrobat</a>
         <a class="nav-btn" href="./premiere.html">premiere</a>
